// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchElement provides contextual information for the message 1`] = `
"
actual:
<div>
<span id=\\"child\\" className=\\"foo\\" />
</div>

expected:
<div>
<span id=\\"child\\" className=\\"foo\\" />
</div>
"
`;

exports[`toMatchElement provides contextual information for the message 2`] = `
"
actual:
<div>
<span id=\\"child\\" className=\\"foo\\" />
</div>

expected:
<div>
<span id=\\"child\\" className=\\"foo\\" />
</div>
"
`;

exports[`toMatchElement provides contextual information for the message 3`] = `
"
actual:
<div>
<span id=\\"child\\" className=\\"foo\\" />
</div>

expected:
<div />
"
`;

exports[`toMatchElement provides contextual information for the message 4`] = `Object {}`;

exports[`toMatchElement returns the message with the proper fail verbage 1`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper fail verbage 2`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper fail verbage 3`] = `"Did not expect actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper fail verbage 4`] = `"toMatchElement must be called on a ShallowWrapper"`;

exports[`toMatchElement returns the message with the proper pass verbage 1`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper pass verbage 2`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper pass verbage 3`] = `"Expected actual value to match the expected value."`;

exports[`toMatchElement returns the message with the proper pass verbage 4`] = `"toMatchElement must be called on a ShallowWrapper"`;
